# mysql-not-so-simple

./: .gitignore  CHANGELOG.md  README.md  circle.yml  mysql-not-so-simple.cabal  stack.yaml
sql/: test.sql
src/: MySql.hs
src/MySql/: Error.hs  Field.hs  Gen.hs  Matcher.hs  Named.hs  QQ.hs  Query.hs  Row.hs  Row.hs-e
src/MySql/Named/: Core.hs
test/: Prelude.hs  Spec.hs
test/Test/: Field.hs  Gen.hs  Row.hs  Sql.hs
