cabal-version:       2.0
name:                mysql-not-so-simple
version:             0.0.0
description:         MySQL interface
synopsis:            MySQL interface
license:             MIT
license-file:        LICENSE
author:              Holmusk
maintainer:          tech@holmusk.com
copyright:           2018 Holmusk
category:            SQL, MySQL, Database
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.4.3

library
  hs-source-dirs:      src

  other-modules:       Prelude
  exposed-modules:     MySql
                         MySql.Error
                         MySql.Field
                         MySql.Row
                         MySql.Query

  build-depends:       base-noprelude >= 4.11 && < 4.12
                     , io-streams
                     , mtl ^>= 2.2
                     , mysql-haskell ^>= 0.8.3
                     , relude ^>= 0.3.0
                     , time ^>= 1.8

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       ScopedTypeVariables


test-suite mysql-not-so-simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mysql-not-so-simple

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
