cabal-version:       2.0
name:                mysql-not-so-simple
version:             0.0.0
description:         MySQL interface
synopsis:            MySQL interface
license:             MIT
license-file:        LICENSE
author:              Holmusk
maintainer:          tech@holmusk.com
copyright:           2018 Holmusk
category:            SQL, MySQL, Database
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.4.3

library
  hs-source-dirs:      src

  other-modules:       Prelude
  exposed-modules:     MySql
                         MySql.Error
                         MySql.Field
                         MySql.Gen
                         MySql.Matcher
                         MySql.Row
                         MySql.Query
                         MySql.QQ

  build-depends:       base-noprelude >= 4.11 && < 4.12
                     , containers >= 0.5 && < 0.7
                     , io-streams
                     , mtl ^>= 2.2
                     , mysql-haskell ^>= 0.8.4
                     , relude ^>= 0.3.0
                     , template-haskell ^>= 2.13
                     , text ^>= 1.2.3
                     , time ^>= 1.8

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       ScopedTypeVariables


test-suite mysql-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test

  main-is:             Spec.hs
  other-modules:       Prelude
                       Test.Field
                       Test.Gen
                       Test.Row
                       Test.Sql

  build-depends:       base-noprelude
                     , hedgehog ^>= 0.6
                     , hspec
                     , hspec-core
                     , mysql-haskell
                     , mysql-not-so-simple
                     , relude
                     , time

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications
